@@ -10,16 +10,14 @@
     <name>routing</name>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.light-4j>1.6.4</version.light-4j>
+        <version.light-4j>2.0.1</version.light-4j>
         <version.jackson>2.9.9</version.jackson>
         <version.slf4j>1.7.25</version.slf4j>
         <version.logback>1.2.3</version.logback>
         <version.junit>4.12</version.junit>
-        <version.undertow>2.0.16.Final</version.undertow>
-        <nexus.server>http://nexus.com:8080</nexus.server>
-        <argLine>-Xmx512m -XX:MaxPermSize=256m</argLine>
+        <version.undertow>2.0.21.Final</version.undertow>
     </properties>
  
     <dependencies>
@@ -79,6 +77,14 @@
     <build>
         <finalName>${project.artifactId}-${project.version}</finalName>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.0</version>
+                <configuration>
+                    <release>${java.version}</release>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-shade-plugin</artifactId>
